--- a/creatividad/index.html
+++ b/creatividad/index.html
@@ -25,23 +25,35 @@
 </header>
 <body>
     <div class="grilla">
-        <div id="catalogo">
-            <h2>Creatividad</h2>
+        <div id="pagina_catalogo">
+            <div class="categorias">Creatividad</div> 
             <div class="secciones">Ver todo</div>
             <div class="secciones">Pintura</div>
             <div class="secciones">Plástica</div>
             <div class="secciones">Decoración</div>
-            <h2>Papelería</h2>
-            <h2>Lápices</h2>
-            <h2>Herramientas</h2>
-            <h2>Cuadernos</h2>
+            <div class="categorias">Papelería</div> 
+            <div class="categorias">Lápices</div> 
+            <div class="categorias">Herramientas</div> 
+            <div class="categorias">Cuadernos</div> 
         </div>
-        <div class="productos">
-            <li><a href="#producto1"><img src="images 2/productos/cuadernos-universitarios.jpg"></a>Producto 1 <br> $1000</li>
-            <li><a href="#producto2"><img src="images 2/productos/lapices-de-colores.jpg"></a>Producto 2 <br> $1000</li>
-            <li><a href="#producto3"><img src="images 2/productos/scotch.png"></a>Producto 3 <br> $1000</li>
-            <li><a href="#producto4"><img src="images 2/productos/temperas-de-colores-glitter.jpg"></a>Producto 4 <br> $1000</li>
-        </div>
+        <ul class="galeria_productos">
+            <li class="galeria_item>
+              <img href="images 2/productos/cuadernos-universitarios" alt="Cuadernos universitarios college" width="300" heigth="300" loading="lazy">
+              <p class="precio_producto">Cuadernos universitarios<br> $0000</p>
+            </li>
+            <li class="galeria_item>
+                <img src="images 2/productos/lapices-de-colores.jpg" alt="Lápices de colores Torre" width="300" heigth="300" loading="lazy">
+                <p class="precio_producto">Lápices de colores<br> $0000</p>
+            </li>
+            <li class="galeria_item>
+                <img src="images 2/productos/scotch.png" alt="Scotch ancho" width="300" heigth="300" loading="lazy">
+                <p class="precio_producto">Scotch<br> $0000</p>
+            </li>
+            <li class="galeria_item>
+                <img src="images 2/productos/temperas-de-colores-glitter.jpg" alt="Temperas de colores glitter" width="300" heigth="300" loading="lazy">
+                <p class="precio_producto">Temperas glitter<br> $0000</p>
+            </li>
+        </ul>
     </div>
 </body>
 
