--- a/home/index.html
+++ b/home/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/ebfd33acd2.js" crossorigin="anonymous"></script>
+    <script> src="home/script.js"</script>
 </head>
 <header>
     <div class="logo"> 
@@ -29,12 +30,24 @@
     <h2>Encuentra aquí los articulos de librería que buscas, y si no lo encuentras contáctame y lo buscaré por ti.</h2>
     <p class="Ofertas">Ofertas para ti</p>
 </body>
-<ul class="galeria">
-    <li><a href="#oferta1"><img src="images/productos/cuadernos-universitarios.jpg"></a></li>
-    <li><a href="#oferta2"><img src="images/productos/lapices-de-colores.jpg"></a></li>
-    <li><a href="#oferta3"><img src="images/productos/scotch.png"></a></li>
-    <li><a href="#oferta4"><img src="images/productos/temperas-de-colores-glitter.jpg"></a></li>
-</ul>
+<section class="splide" aria-label="galeria_ofertas">
+    <div class="splide_track">
+      <ul class="splide_list">
+        <li class="splide_slide">
+          <img src="images/productos/cuadernos-universitarios.jpg" alt="Cuadernos universitarios Torre">
+        </li>
+        <li class="splide_slide">
+          <img src="images/productos/lapices-de-colores.jpg" alt="Lápices de colores Torre">
+        </li>
+        <li class="splide_slide">
+          <img src="images/productos/scotch.png" alt="Scotch ancho">
+        </li>
+        <li class="splide_slide">
+          <img src="images/productos/temperas-de-colores-glitter.jpg" alt="Caja de temperas glitter">
+        </li>
+      </ul>
+    </div>
+</section>
 <div class="catalogo_productos">Catálogo de productos</div>
 <div class="catalogo">
     <a href="#" class="boton_catalogo">Papelería</a>
