--- a/catalogo/index.html
+++ b/catalogo/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Creatividad</title>
+    <title>Catálogo</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,105 +34,123 @@
       </ul>
     </nav>
 </header>
-<div class="breadcrames">
-    <a href="#" class="breadcrames_text">Home/</a>
-    <a href="#" class="breadcrames_text">Catálogo/</a>
-    <a href="#" class="breadcrames_text">Creatividad/</a>
-</div>
-<body>
+<body>¿
+    <div class="breadcrames">
+        <a href="../home/index.html" class="breadcrames_text">Home/</a>
+        <a href="#" class="breadcrames_text">Catálogo/</a>
+        <a href="#" class="breadcrames_actual">Creatividad/</a>
+    </div>
     <h1 class="titulos">Catálogo</h1>
     <div class="grilla">
         <div id="catalogo_lateral">
             <div class="categorias">Cuadernos</div> 
+                <div class="secciones">Ver todo</div>
+                <div class="secciones">College</div>
+                <div class="secciones">Universitarios</div>
+                <div class="secciones">Croqueras</div>
             <div class="categorias">Creatividad</div> 
                 <div class="secciones">Ver todo</div>
                 <div class="secciones">Pintura</div>
                 <div class="secciones">Plástica</div>
                 <div class="secciones">Decoración</div>
             <div class="categorias">Papelería</div> 
+                <div class="secciones">Ver todo</div>
+                <div class="secciones">Cartones</div>
+                <div class="secciones">Pliegos</div>
+                <div class="secciones">Papel decorativo</div>
             <div class="categorias">Lápices</div> 
+                <div class="secciones">Ver todo</div>
+                <div class="secciones">Lapiz de palo</div>
+                <div class="secciones">Plumones</div>
+                <div class="secciones">Lapiz pasta</div>
+                <div class="secciones">Otros</div>
             <div class="categorias">Herramientas</div> 
-    
+                <div class="secciones">Ver todo</div>
+                <div class="secciones">Pegamentos</div>
+                <div class="secciones">Reglas</div>
+                <div class="secciones">Pinceles</div>
+                <div class="secciones">Tijeras y cuchillos</div>
+                <div class="secciones">Otros</div>
         </div>
         <ul class="galeria_productos">
-            <section class="cr_pintura">
+            <section class="cr">
                 <li class="galeria_item"></li>
                     <img src="../images/productos/creatividad/pintura/cr-pintura1.png" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <p class="precio_producto">Caja de témperas Proarte<br> $0000</p>
+                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
                 </li>
                 <li class="galeria_item">
                     <img src="../images/productos/creatividad/pintura/cr-pintura2.png" alt="Tempera por unidad Proarte" width="150" heigth="150" loading="lazy">
-                    <p class="precio_producto">Frasco témpera Proarte 100ml<br> $1490</p>
+                    <span class="precio_producto">Frasco témpera Proarte 100ml<br> $1490</span>
                 </li>
                 <li class="galeria_item">
                     <img src="../images/productos/creatividad/pintura/cr-pintura3.png" alt="Acuarela 12 colores Pentel" width="150" heigth="150" loading="lazy">
-                    <p class="precio_producto">Acuarela 12 colores Pentel<br> $0000</p>
+                    <span class="precio_producto">Acuarela 12 colores Pentel<br> $0000</span>
                 </li>
                 <li class="galeria_item">
                     <img src="../images/productos/creatividad/pintura/cr-pintura4.png" alt="Pintura por unidad para vidrio" width="150" heigth="150" loading="lazy">
-                    <p class="precio_producto">Frasco de pintura para vidrio<br> $0000</p>
+                    <span class="precio_producto">Frasco de pintura para vidrio<br> $0000</span>
                 </li>
                 <li class="galeria_item">
                     <img src="../images/productos/creatividad/pintura/cr-pintura5.png" alt="Tinta china por unidad" width="150" heigth="150" loading="lazy">
-                    <p class="precio_producto">Frasco tinta china<br> $0000</p>
+                    <span class="precio_producto">Frasco tinta china<br> $0000</span>
                 </li>
             </section>
-            <section class="cr_decoracion">
+            <section class="cr">
                 <li class="galeria_item"></li>
                     <img src="../images/productos/creatividad/decoracion/cr-decoracion1.jpg" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <p class="precio_producto">Caja de témperas Proarte<br> $0000</p>
+                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
                 </li>
                 <li class="galeria_item"></li>
                     <img src="../images/productos/creatividad/decoracion/cr-decoracion2.png" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <p class="precio_producto">Caja de témperas Proarte<br> $0000</p>
+                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
                 </li>
                 <li class="galeria_item"></li>
                     <img src="../images/productos/creatividad/decoracion/cr-decoracion3.png" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <p class="precio_producto">Caja de témperas Proarte<br> $0000</p>
+                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
                 </li>
                 <li class="galeria_item"></li>
                     <img src="../images/productos/creatividad/decoracion/cr-decoracion4.png" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <p class="precio_producto">Caja de témperas Proarte<br> $0000</p>
+                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
                 </li>
                 <li class="galeria_item"></li>
                     <img src="../images/productos/creatividad/decoracion/cr-decoracion5.png" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <p class="precio_producto">Caja de témperas Proarte<br> $0000</p>
+                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
                 </li>
                 <li class="galeria_item"></li>
                     <img src="../images/productos/creatividad/decoracion/cr-decoracion6.jpeg" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <p class="precio_producto">Caja de témperas Proarte<br> $0000</p>
+                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
                 </li>
                 <li class="galeria_item"></li>
                     <img src="../images/productos/creatividad/decoracion/cr-decoracion7.png" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <p class="precio_producto">Caja de témperas Proarte<br> $0000</p>
+                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
                 </li>
                 <li class="galeria_item"></li>
                     <img src="../images/productos/creatividad/decoracion/cr-decoracion8.png" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <p class="precio_producto">Caja de témperas Proarte<br> $0000</p>
+                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
                 </li>
                 <li class="galeria_item"></li>
                     <img src="../images/productos/creatividad/decoracion/cr-decoracion9.png" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <p class="precio_producto">Caja de témperas Proarte<br> $0000</p>
+                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
                 </li>
                 <li class="galeria_item"></li>
                     <img src="../images/productos/creatividad/decoracion/cr-decoracion10.png" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <p class="precio_producto">Caja de témperas Proarte<br> $0000</p>
+                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
                 </li>
                 <li class="galeria_item"></li>
                     <img src="../images/productos/creatividad/decoracion/cr-decoracion11.png" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <p class="precio_producto">Caja de témperas Proarte<br> $0000</p>
+                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
                 </li>
                 <li class="galeria_item"></li>
                     <img src="../images/productos/creatividad/decoracion/cr-decoracion12.png" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <p class="precio_producto">Caja de témperas Proarte<br> $0000</p>
+                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
                 </li>
                 <li class="galeria_item"></li>
                     <img src="../images/productos/creatividad/decoracion/cr-decoracion13.png" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <p class="precio_producto">Caja de témperas Proarte<br> $0000</p>
+                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
                 </li>
                 <li class="galeria_item"></li>
                     <img src="../images/productos/creatividad/decoracion/cr-decoracion14.png" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <p class="precio_producto">Caja de témperas Proarte<br> $0000</p>
+                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
                 </li>
             </section>
         </ul>
