--- a/cotiza tu lista/index.html
+++ b/cotiza tu lista/index.html
@@ -13,29 +13,35 @@
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/ebfd33acd2.js" crossorigin="anonymous"></script>
     </head>
-<body>
-  <header>
-    <div class="logo"> 
-        <img src="../images/tiaruth-logo.png" class="logopng" alt="Logo de la librería Tia Ruth" width="105px" height="105px">
+
+<header>
+  <div class="logo"> 
+      <img src="../images/tiaruth-logo.png" class="logopng" alt="Logo de la librería Tia Ruth" width="105px" height="105px">
         <span>Librería Tia Ruth</span>
-    </div>
-    <nav class="menu">
-      <ul>
-          <li class="dropdown">
-              <a class="catalogo-button" href="../creatividad/index.html">Catálogo</a>
-              <ul class="sub-menu">
-                  <li><a href="#">Cuadernos</a></li>
-                  <li><a href="../creatividad/index.html">Creatividad</a></li>
-                  <li><a href="#">Herramientas</a></li>
-                  <li><a href="#">Lápices</a></li>
-                  <li><a href="#">Papelería</a></li>
-              </ul>
-          </li>
-          <li><a href="../cotiza tu lista/index.html">Cotiza tu lista</a></li>
-          <li><a href="../contacto/index.html">Contacto</a></li>
-      </ul>
-    </nav>
-</header>    
+  </div>
+  <nav class="menu">
+    <ul>
+        <li class="dropdown">
+            <a class="catalogo-button" href="../creatividad/index.html">Catálogo</a>
+            <ul class="sub-menu">
+              <li><a href="#">Cuadernos</a></li>
+              <li><a href="../creatividad/index.html">Creatividad</a></li>
+              <li><a href="#">Herramientas</a></li>
+              <li><a href="#">Lápices</a></li>
+              <li><a href="#">Papelería</a></li>
+            </ul>
+        </li>
+        <li><a href="../cotiza tu lista/index.html">Cotiza tu lista</a></li>
+        <li><a href="../contacto/index.html">Contacto</a></li>
+    </ul>
+  </nav>
+</header> 
+<body>
+<div class="breadcrames">
+  <a href="../home/index.html" class="breadcrames_text">Home/</a>
+  <a href="#" class="breadcrames_actual">Cotiza tu lista</a>
+</div>
+
 <section class="cotiza">
   <h1 class="titulos">Cotiza tu lista escolar</h1>   
     <ol class="como_cotizar">¿Cómo cotizar?
@@ -48,7 +54,6 @@
     <a href="#" class="boton_cotiza">Enviar un mensaje</a>
 </section>
 <img src="../images/clientes/tiaruth-clienta.png" class="foto_clienta" alt="Fotografía de clienta recibiendo su pedido" width="600px" height="500px">
-
 </body>
 <span class="pre_footer">.</span>
 <footer>
