--- a/home/index.html
+++ b/home/index.html
@@ -13,30 +13,29 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/ebfd33acd2.js" crossorigin="anonymous"></script>
 </head>
+<header>
+  <div class="logo"> 
+    <img src="../images/tiaruth-logo.png" class="logopng" alt="Logo de la librería Tia Ruth" width="105px" height="105px">
+    <div>Librería Tia Ruth</div>
+  </div>
+  <nav class="menu">
+    <ul>
+        <li class="dropdown">
+            <a class="catalogo-button" href="../catalogo/index.html">Catálogo</a>
+            <ul class="sub-menu">
+              <li><a href="#">Cuadernos</a></li>
+              <li><a href="#">Creatividad</a></li>
+              <li><a href="#">Herramientas</a></li>
+              <li><a href="#">Lápices</a></li>
+              <li><a href="#">Papelería</a></li>
+            </ul>
+        </li>
+        <li><a href="../cotiza tu lista/index.html">Cotiza tu lista</a></li>
+        <li><a href="../contacto/index.html">Contacto</a></li>
+    </ul>
+  </nav>
+</header>
 <body>
-  <header>
-      <div class="logo"> 
-          <img src="../images/tiaruth-logo.png" class="logopng" alt="Logo de la librería Tia Ruth" width="105px" height="105px">
-          <div>Librería Tia Ruth</div>
-      </div>
-      <nav class="menu">
-        <ul>
-            <li class="dropdown">
-                <a class="catalogo-button" href="../creatividad/index.html">Catálogo</a>
-                <ul class="sub-menu">
-                    <li><a href="#">Cuadernos</a></li>
-                    <li><a href="../creatividad/index.html">Creatividad</a></li>
-                    <li><a href="#">Herramientas</a></li>
-                    <li><a href="#">Lápices</a></li>
-                    <li><a href="#">Papelería</a></li>
-                </ul>
-            </li>
-            <li><a href="../cotiza tu lista/index.html">Cotiza tu lista</a></li>
-            <li><a href="../contacto/index.html">Contacto</a></li>
-        </ul>
-      </nav>
-  </header>
-</body>
 <section class="presentacion">
     <h1 class="titulos">Hola! Soy la tía Ruth</h1>
     <h2>Encuentra aquí los articulos de librería que buscas, y si no lo encuentras contáctame y lo buscaré por ti.</h2>
@@ -45,13 +44,13 @@
 <section>
     <div class="galeria">
       <ul class="galeria_ofertas">
-        <a><li class="galeria_fotos">
+        <li class="galeria_fotos">
           <img src="../images/productos/herramientas/tijeras y cuchillos/he-tijeras1.png" alt="Cuadernos universitarios Torre" height="200px" width="200px">
           <span class="nombre_oferta">Tijera proarte</span>
           <div class="precios">
             <span style="text-decoration: line-through;">$1100</span><span>/$900</span>
           </div>
-        </li></a>
+        </li>
         <li class="galeria_fotos">
           <img src="../images/productos/creatividad/decoracion/cr-decoracion1.jpg" alt="Scotch ancho" height="200px" width="200px">
           <span class="nombre_oferta">Palos de helado colores</span>
@@ -84,7 +83,8 @@
     <a href="#" class="boton_catalogo">Herramientas</a>
     <a href="#" class="boton_catalogo">Cuadernos</a>
 </div>
-<img src="../images/tiaruth-logo-caligrafia.png" alt="Logo caligrafía Tia Ruth"></img>
+<img class="logo-caligrafia"  src="../images/tiaruth-logo-caligrafia.png" alt="Logo caligrafía Tia Ruth" width="800px" height="350px"></img>
+</body>
 <span class="pre_footer">.</span>
 <footer>
     <div class="contacto_footer">
